tests/errors/tabular_index_length.ki
var pd = import("tabular")
var s = pd.Series([1, 2, 3], index=["a", "b"])
